--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,7 +32,7 @@ jobs:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
           application_name: frontend
-          environment_name: frontend-env
+          environment_name: Frontend-env
           existing_bucket_name: elasticbeanstalk-ap-south-1-211125452313
           region: ap-south-1
           version_label: ${{ github.sha }}
