--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,31 +1,21 @@
-name: Deploy MultiDocker
+name: Deploy Frontend
 on:
   push:
     branches:
-      - master
- 
+      - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-      - run: docker build -t kishan306/react-test -f ./client/Dockerfile.dev ./client
+      - run: docker build -t kishan306/react-test -f Dockerfile.dev .
       - run: docker run -e CI=true kishan306/react-test npm test
- 
-      - run: docker build -t kishan306/multi-client-10-14 ./client
-      - run: docker build -t kishan306/multi-nginx-10-14 ./nginx
-      - run: docker build -t kishan306/multi-server-10-14 ./server
-      - run: docker build -t kishan306/multi-worker-10-14 ./worker
- 
-      - run: docker push kishan306/multi-client-10-14
-      - run: docker push kishan306/multi-nginx-10-14
-      - run: docker push kishan306/multi-server-10-14
-      - run: docker push kishan306/multi-worker-10-14
- 
+
       - name: Generate deployment package
         run: zip -r deploy.zip . -x '*.git*'
- 
+
       - name: Deploy to EB
         uses: einaregilsson/beanstalk-deploy@v18
         with:
